syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";

message EventPb {
  enum Type {
    TYPE_UNSPECIFIED = 0;
	  CREATE_WORK = 1;
	  UPDATE_WORK = 2;
	  DELETE_WORK = 3;
	  START_WORK = 4;
	  PAUSE_WORK = 5;
	  RESUME_WORK = 6;
	  FINISH_WORK = 7;
	  CANCEL_FINISH_WORK = 8;
  }

  string id = 1;
  string prev_id = 2;
  string work_id = 3;
  Type type = 4;
  string title = 5;
  google.protobuf.Timestamp time = 6;
  google.protobuf.Timestamp created_at = 7;
}

